augur-cli/crates/augur-core/tests/compile_fail/cases/cf_002_execution_step_id_raw_string_assignment.tests.rs
use augur_domain::domain::ExecutionStepId;

fn main() {
    let _invalid: ExecutionStepId = "raw-step-id".to_string();
}
