augur-cli/crates/augur-core/tests/compile_fail/cases/cf_002_execution_step_id_raw_string_assignment.tests.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/cases/cf_002_execution_step_id_raw_string_assignment.tests.rs:4:37
  |
4 |     let _invalid: ExecutionStepId = "raw-step-id".to_string();
  |                   ---------------   ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `ExecutionStepId`, found `String`
  |                   |
  |                   expected due to this
